--- a/src/app/navigationDrawer/navigationDrawer.component.html
+++ b/src/app/navigationDrawer/navigationDrawer.component.html
@@ -5,6 +5,9 @@
     </button>
     <h1>Doors n' Corners</h1>
     <span class="menu-spacer"></span>
+    <button [hidden]="nopremium" style="margin-left: 30px;" mat-button  (click)="openModalPremium()">
+      <mat-icon class="mat-icon-custom" color="white">stars</mat-icon> !Hazme Premium!
+    </button>
     <div>
 
     </div>
@@ -17,16 +20,14 @@
 <mat-sidenav-container style="background-color: darkgray;">
   <mat-sidenav class="sidenav-custom" #sidenav>
     <mat-nav-list>
-      <a mat-list-item class="a-custom" [routerLink]="['./home']">
-        <mat-icon class="mat-icon-custom" color="white">dashboard</mat-icon> Dashboard
-      </a>
+
       <a mat-list-item class="a-custom" [routerLink]="['./profile']">
         <mat-icon class="mat-icon-custom" color="white">person_pin</mat-icon> Mi perfil
       </a>
       <a mat-list-item class="a-custom" [routerLink]="['./offers']">
         <mat-icon class="mat-icon-custom" color="white">work</mat-icon>Posiciones de trabajo
       </a>
-      <a mat-list-item class="a-custom" [routerLink]="['./premium']">
+      <a [hidden]="premium" mat-list-item class="a-custom" [routerLink]="['./premium']">
         <mat-icon class="mat-icon-custom" color="white">contacts</mat-icon>Alumnos-Premium
       </a>
       <a style="color: red;" mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
