--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="register">
-  <form  [formGroup]="registerForm" class="custom-form">
-    <h1 style="color: aliceblue;text-align: center;">Register</h1>
+  <form [formGroup]="registerForm" class="custom-form">
+    <h1 style="color: aliceblue; text-align: center">Register</h1>
     <input
       type="email"
       formControlName="email"
@@ -15,44 +15,57 @@
     />
     <input
       type="text"
-
       formControlName="nombre"
       placeholder="Nombre"
       required="required"
     />
-    <label style="color: aliceblue;" for="provincias">Selecciona una provincia: </label>
+    <label style="color: aliceblue" for="provincias"
+      >Selecciona una provincia:
+    </label>
     <mat-form-field class="example-full-width">
-      <mat-label style="color: aliceblue;">Provincia</mat-label>
-      <mat-select
-      (selectionChange)="changeselected($event.value)"
-      >
-        <mat-option
-          *ngFor="let p of listaProv"
-          [value]="p"
-        >
+      <mat-label style="color: aliceblue">Provincia</mat-label>
+      <mat-select (selectionChange)="changeselected($event.value)">
+        <mat-option *ngFor="let p of listaProv" [value]="p">
           {{ p.nombre }}
         </mat-option>
       </mat-select>
-
     </mat-form-field>
 
-
     <input
-    type="text"
-    formControlName="localidad"
+      type="text"
+      formControlName="localidad"
       placeholder="Localidad"
       required="required"
     />
     <input
-    type="text"
-    formControlName="direccion"
+      type="text"
+      formControlName="direccion"
       placeholder="Dirección"
       required="required"
     />
+    <h5 style="color: aliceblue">
+      Si te haces Premium, por sólo 9,90€ al mes podras enviar un mensaje para
+      contactar a los alumnos ¡aunque no esten inscritos a tus posiciones!
+    </h5>
+    <h5 style="color: aliceblue">
+      Se te redirigirá a la plataforma de pago totalmente segura tras el
+      registro.
+    </h5>
 
-    <button [disabled]="registerForm.invalid" type="submit" (click)="register()">Register</button>
-    <br>
-   
+    <mat-slide-toggle
+    formControlName="premiumform"
+    (toggleChange)="changePremium()"
+      style="color: aliceblue; font-weight: bold; margin-bottom: 30px"
+      >!Hazme premium!</mat-slide-toggle
+    >
+    <button
+      [disabled]="registerForm.invalid"
+      type="submit"
+      (click)="register()"
+    >
+      Register
+    </button>
+    <br />
     <a routerLink="/login" class="btn btn-link">Atras</a>
   </form>
 </div>
