--- a/src/app/student-premium-list/student-premium-list.component.html
+++ b/src/app/student-premium-list/student-premium-list.component.html
@@ -90,9 +90,10 @@
         <div class="example-button-row">
           <div class="example-flex-container">
             <button
+            (click)="openModalContactoPremium(a)"
               style="background-color: yellow; color: black"
               mat-raised-button
-              aria-label="modificar posicion"
+              aria-label="contactar alumno"
             >
               Mensaje
             </button>
