cambios en el cierre de sesion

--- a/src/app/navigationDrawer/navigationDrawer.component.html
+++ b/src/app/navigationDrawer/navigationDrawer.component.html
@@ -30,7 +30,7 @@
       <a [hidden]="premium" mat-list-item class="a-custom" [routerLink]="['./premium']">
         <mat-icon class="mat-icon-custom" color="white">contacts</mat-icon>Alumnos-Premium
       </a>
-      <a style="color: red;" mat-list-item (click)="sidenav.toggle()" href="" mat-list-item
+      <a style="color: red;" mat-list-item (click)="cerrarSesion()" href="" mat-list-item
         >Cerrar sesión</a
       >
     </mat-nav-list>
