--- a/src/app/student-premium-list/student-premium-list.component.html
+++ b/src/app/student-premium-list/student-premium-list.component.html
@@ -81,7 +81,7 @@
 
 <!-- LISTA ALUMNOS -->
 <mat-grid-list cols="3" rowHeight="300px" gutterSize="10px">
-  <mat-grid-tile *ngFor="let a of alumnosBusqueda" style="width: min-content">
+  <mat-grid-tile *ngFor="let a of alumnosBusqueda" style="width: min-content;">
     <mat-card
       class="card m-3"
       style="background-color: black; min-height: 200px; width: 350px"
