--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<body class="mainBG">
-  <div class="login" style="width: 100%; height: 100%">
+<body class="mainBG" >
+  <div class="login" style="width: 100%; height: 100%;">
     <form class="custom-form" method="post">
       <h1 [hidden]="logincode" style="text-align: center; color: aliceblue">Login</h1>
       <h1 [hidden]="code" style="text-align: center; color: aliceblue">Verificación</h1>
