--- a/src/app/navigationDrawer/navigationDrawer.component.html
+++ b/src/app/navigationDrawer/navigationDrawer.component.html
@@ -35,7 +35,7 @@
       >
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content style="height: 100%; background: linear-gradient(0deg, rgba(16,157,231,1) 0%, rgba(0,0,0,1) 80%); ">
     <div style="height: 88vh">
       <router-outlet></router-outlet>
     </div>
