--- a/src/app/offers/offers.component.html
+++ b/src/app/offers/offers.component.html
@@ -12,7 +12,10 @@
 >
   Crear Posición
 </button>
-
+<h1 style="font-size: 35px; margin-top: 10px; margin-left: 20px;color: aliceblue;">
+ Posiciones de trabajo
+</h1>
+<mat-divider style="background-color: aliceblue;"></mat-divider>
 <div class="row">
   <div class="col-12">
     <mat-grid-list cols="3" rowHeight="900px">
