--- a/src/app/student-premium-list/student-premium-list.component.css
+++ b/src/app/student-premium-list/student-premium-list.component.css
@@ -8,7 +8,7 @@ color: aliceblue;
 }
 
 .mat-form-field-underline {
- color: #63961C;
+ background-color: aliceblue;
 }
 .mat-label{
   color: aliceblue;
