--- a/src/app/student-premium-list/student-premium-list.component.html
+++ b/src/app/student-premium-list/student-premium-list.component.html
@@ -1,5 +1,5 @@
 <div style="margin-top: 30px; margin-left: 20px">
-  <H1>Búsqueda de candidatos</H1>
+  <H1 style="color: aliceblue;">Búsqueda de candidatos</H1>
   <table>
     <tr>
       <td>
@@ -74,10 +74,10 @@
 </div>
 
 <!-- TERMINA LA PARTE DE BUSQUEDA, COMIENZA LA DE RESULTADOS -->
-<h1 style="font-size: 35px; margin-top: 30px; margin-left: 20px">
+<h1 style="font-size: 35px; margin-top: 30px; margin-left: 20px;color: aliceblue;">
   Lista de candidatos
 </h1>
-<mat-divider></mat-divider>
+<mat-divider style="background-color: aliceblue;"></mat-divider>
 
 <!-- LISTA ALUMNOS -->
 <mat-grid-list cols="3" rowHeight="300px" gutterSize="10px">
